# fastapi-auth

./: oops.mdx
auth/: .env  pyproject.toml
auth/src/fastapi_auth/: main.py
auth/src/fastapi_auth/core/: database.py
auth/src/fastapi_auth/core/security/: authHandler.py
auth/src/fastapi_auth/db/models/: user.py
auth/src/fastapi_auth/db/repository/: userRepo.py
auth/src/fastapi_auth/db/schema/: user.py
auth/src/fastapi_auth/routers/: auth.py
auth/src/fastapi_auth/service/: userService.py
auth/src/fastapi_auth/utils/: init_db.py
